hphp/test/zend/good/ext/sqlite3/tests/sqlite3_22_loadextension.php.skipif
<?php
require_once(dirname(__FILE__) . '/skipif.inc');
$r = new ReflectionClass("sqlite3");
if (!$r->hasMethod("loadExtension")) {
	die("skip - sqlite3 doesn't have loadExtension enabled");
}
?>