hphp/test/zend/bad/ext/sqlite3/tests/sqlite3_35_stmt_readonly.php.skipif
<?php require_once(dirname(__FILE__) . '/skipif.inc');
$version = SQLite3::version();
if ($version['versionNumber'] < 3007004) {
  die("skip");
}
?>